It worked for a little bit, second test

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: The Four Color Word
 email: snaszycode@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Who knew a four letter word could be so colorful
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "the-four-color-word/" # the subpath of your site, e.g. /blog
+url: "https://snaszy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: snazyone
 github_username:  snaszy
 
